--- a/index.html
+++ b/index.html
@@ -54,133 +54,133 @@
                     <p class="heading">Fesiyen</p>
                     <p class="description">разработка интерфейса</p>
                 </div>
+                <button class="project__look" onclick="location.href='/'">Смотреть все</button>
+            </div>
+
+            <div class="container">
+
+                <h3 id="competence">Мои компетенции</h3>
+                <ul class="section">
+                    <li class="section__competence">
+                        <img class="img" src="resurses/icon.png"
+                            alt="логотип Electron, представляющий собой стилизованный атом. Он выполнен в белом цвете на зелёном фоне. " />
+                        <p class="heading__section">HTML и CSS</p>
+                        <p class="description__section">
+                            это основа фронтенд разработки. Умение создавать и правильно
+                            структурировать HTML-документы, а также применять стили к этим
+                            документам на CSS, является обязательным навыком для каждого
+                            фронтенд разработчика.
+                        </p>
+                    </li>
+                    <li class="section__competence">
+                        <img class="img" src="resurses/icon.png"
+                            alt="логотип Electron, представляющий собой стилизованный атом. Он выполнен в белом цвете на зелёном фоне. " />
+                        <p class="heading__section">JavaScript</p>
+                        <p class="description__section">
+                            это язык программирования, который используется для создания
+                            динамического и интерактивного пользовательского интерфейса.
+                            Хороший фронтенд разработчик должен быть знаком с основами
+                            JavaScript, включая работу с DOM-деревом, асинхронными запросами и
+                            манипуляцией данными на стороне клиента.
+                        </p>
+                    </li>
+                    <li class="section__competence">
+                        <img class="img" src="resurses/icon.png"
+                            alt="логотип Electron, представляющий собой стилизованный атом. Он выполнен в белом цвете на зелёном фоне. " />
+                        <p class="heading__section">Работа с библиотеками и фреймворками</p>
+                        <p class="description__section">
+                            фронтенд разработчики должны быть знакомы с различными
+                            библиотеками и фреймворками, такими как React, Angular, Vue и
+                            другими. Умение использовать готовые решения, адаптировать их под
+                            нужды проекта и расширять их функциональность, является очень
+                            важным навыком.
+                        </p>
+                    </li>
+                    <li class="section__competence">
+                        <img class="img" src="resurses/icon.png"
+                            alt="логотип Electron, представляющий собой стилизованный атом. Он выполнен в белом цвете на зелёном фоне. " />
+                        <p class="heading__section">
+                            Разработка для мобильных устройств и адаптивная верстка
+                        </p>
+                        <p class="description__section">
+                            фронтенд разработчики должны быть знакомы с различными
+                            библиотеками и фреймворками, такими как React, Angular, Vue и
+                            другими. Умение использовать готовые решения, адаптировать их под
+                            нужды проекта и расширять их функциональность, является очень
+                            важным навыком.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="container">
+                <h4 id="servises">Помогаю реализовать широкий спектр задач</h4>
+                <ul class="section-realization">
+                    <li class="realization__ability">
+                        <img class="realization__img" src="resurses/take-full-control-of-your.png" alt="" />
+                        <div class="fon__description">
+                            <p class="realization__header">Разработка сайта под ключ</p>
+
+                            <p class="realization__description">
+                                Это создание дизайн веб-сайтов, созданный для удобства
+                                пользователя и решения бизнес-задач Сайты должны быть понятными
+                                и удобными, ведь чем понятнее сайт, тем быстрее пользователь
+                                совершит целевое действие.
+                            </p>
+                        </div>
+                    </li>
+
+                    <li class="realization__ability">
+                        <img class="realization__img" src="resurses/moments-move-us.png" alt="" />
+                        <div class="fon__description">
+                            <p class="realization__header">Верстка сайтов</p>
+                            <p class="realization__description">
+                                Это процесс создания HTML-документов и применения к ним стилей
+                                на CSS. Фронтенд разработчик может помочь создать
+                                привлекательный и удобный интерфейс для вашего сайта.
+                            </p>
+                        </div>
+                    </li>
+
+                    <li class="realization__ability">
+                        <img class="realization__img" src="resurses/the-invitation-code.png" alt="" />
+                        <div class="fon__description">
+                            <p class="realization__header">
+                                Разработка мобильного интерфейса
+                            </p>
+                            <p class="realization__description">
+                                Это процесс создания интерактивных элементов на странице с
+                                помощью JavaScript. Фронтенд разработчик может помочь создать
+                                динамический и удобный пользовательский интерфейс для вашего
+                                сайта или приложения.
+                            </p>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
-
-        <div class="container">
-            <button class="project__look">Смотреть все</button>
-            <h3 id="competence">Мои компетенции</h3>
-            <ul class="section">
-                <li class="section__competence">
-                    <img class="img" src="resurses/icon.png"
-                        alt="логотип Electron, представляющий собой стилизованный атом. Он выполнен в белом цвете на зелёном фоне. " />
-                    <p class="heading__section">HTML и CSS</p>
-                    <p class="description__section">
-                        это основа фронтенд разработки. Умение создавать и правильно
-                        структурировать HTML-документы, а также применять стили к этим
-                        документам на CSS, является обязательным навыком для каждого
-                        фронтенд разработчика.
-                    </p>
-                </li>
-                <li class="section__competence">
-                    <img class="img" src="resurses/icon.png"
-                        alt="логотип Electron, представляющий собой стилизованный атом. Он выполнен в белом цвете на зелёном фоне. " />
-                    <p class="heading__section">JavaScript</p>
-                    <p class="description__section">
-                        это язык программирования, который используется для создания
-                        динамического и интерактивного пользовательского интерфейса.
-                        Хороший фронтенд разработчик должен быть знаком с основами
-                        JavaScript, включая работу с DOM-деревом, асинхронными запросами и
-                        манипуляцией данными на стороне клиента.
-                    </p>
-                </li>
-                <li class="section__competence">
-                    <img class="img" src="resurses/icon.png"
-                        alt="логотип Electron, представляющий собой стилизованный атом. Он выполнен в белом цвете на зелёном фоне. " />
-                    <p class="heading__section">Работа с библиотеками и фреймворками</p>
-                    <p class="description__section">
-                        фронтенд разработчики должны быть знакомы с различными
-                        библиотеками и фреймворками, такими как React, Angular, Vue и
-                        другими. Умение использовать готовые решения, адаптировать их под
-                        нужды проекта и расширять их функциональность, является очень
-                        важным навыком.
-                    </p>
-                </li>
-                <li class="section__competence">
-                    <img class="img" src="resurses/icon.png"
-                        alt="логотип Electron, представляющий собой стилизованный атом. Он выполнен в белом цвете на зелёном фоне. " />
-                    <p class="heading__section">
-                        Разработка для мобильных устройств и адаптивная верстка
-                    </p>
-                    <p class="description__section">
-                        фронтенд разработчики должны быть знакомы с различными
-                        библиотеками и фреймворками, такими как React, Angular, Vue и
-                        другими. Умение использовать готовые решения, адаптировать их под
-                        нужды проекта и расширять их функциональность, является очень
-                        важным навыком.
-                    </p>
-                </li>
-            </ul>
-        </div>
-
-        <div class="container">
-            <h4 id="servises">Помогаю реализовать широкий спектр задач</h4>
-            <ul class="section-realization">
-                <li class="realization__ability">
-                    <img class="realization__img" src="resurses/take-full-control-of-your.png" alt="" />
-                    <div class="fon__description">
-                        <p class="realization__header">Разработка сайта под ключ</p>
-
-                        <p class="realization__description">
-                            Это создание дизайн веб-сайтов, созданный для удобства
-                            пользователя и решения бизнес-задач Сайты должны быть понятными
-                            и удобными, ведь чем понятнее сайт, тем быстрее пользователь
-                            совершит целевое действие.
-                        </p>
+        <div class="futer">
+            <div class="boxes-wrepper">
+                <div id="contacts" class="contacts-box">
+                    <p class="contacts">для связи:</p>
+                    <div class="link-container">
+                        <a href="https://www.instagram.com/@support">instagram</a>
+                        <a href="https://t.me/@support" target="_blank">telegram</a>
+                        <a class="e-mail" href="mailto:support@mail.ru">mail</a>
                     </div>
-                </li>
-
-                <li class="realization__ability">
-                    <img class="realization__img" src="resurses/moments-move-us.png" alt="" />
-                    <div class="fon__description">
-                        <p class="realization__header">Верстка сайтов</p>
-                        <p class="realization__description">
-                            Это процесс создания HTML-документов и применения к ним стилей
-                            на CSS. Фронтенд разработчик может помочь создать
-                            привлекательный и удобный интерфейс для вашего сайта.
-                        </p>
-                    </div>
-                </li>
-
-                <li class="realization__ability">
-                    <img class="realization__img" src="resurses/the-invitation-code.png" alt="" />
-                    <div class="fon__description">
-                        <p class="realization__header">
-                            Разработка мобильного интерфейса
-                        </p>
-                        <p class="realization__description">
-                            Это процесс создания интерактивных элементов на странице с
-                            помощью JavaScript. Фронтенд разработчик может помочь создать
-                            динамический и удобный пользовательский интерфейс для вашего
-                            сайта или приложения.
-                        </p>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="futer">
-        <div class="boxes-wrepper">
-            <div id="contacts" class="contacts-box">
-                <p class="contacts">для связи:</p>
-                <div class="link-container">
-                    <a href="https://www.instagram.com/@support">instagram</a>
-                    <a href="https://t.me/@support" target="_blank">telegram</a>
-                    <a class="e-mail" href="mailto:support@mail.ru">mail</a>
+                </div>
+                <div class="img-box">
+                    <img class="img__futer" src="resurses/for-contacts.png" alt="/" />
                 </div>
             </div>
-            <div class="img-box">
-                <img class="img__futer" src="resurses/for-contacts.png" alt="/" />
-            </div>
-        </div>
 
-        <div class="futer-about">
-            <div class="container">
-                <p class="about__my">Портфолио фронтенд-разработчика Саши Орлова</p>
-                <p class="about__reserved">Все права защищены. 2023</p>
+            <div class="futer-about">
+                <div class="container">
+                    <p class="about__my">Портфолио фронтенд-разработчика Саши Орлова</p>
+                    <p class="about__reserved">Все права защищены. 2023</p>
+                </div>
             </div>
         </div>
-    </div>
 </body>
 
 </html>
