--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <h4 id="servises">Помогаю реализовать широкий спектр задач</h4>
                 <ul class="section-realization">
                     <li class="realization__ability">
-                        <img class="realization__img" src="resurses/take-full-control-of-your.png" alt="" />
+                        <img class="realization__img" src="resurses/take-full-control-of-your.png" alt="макет веб-страницы с текстом и элементами интерфейса приложения Тинькофф Инвестиции" />
                         <div class="fon__description">
                             <p class="realization__header">Разработка сайта под ключ</p>
 
@@ -131,7 +131,7 @@
                     </li>
 
                     <li class="realization__ability">
-                        <img class="realization__img" src="resurses/moments-move-us.png" alt="" />
+                        <img class="realization__img" src="resurses/moments-move-us.png" alt="макет веб-страницы с логотипом «moment» и текстом «Moments move us»" />
                         <div class="fon__description">
                             <p class="realization__header">Верстка сайтов</p>
                             <p class="realization__description">
@@ -143,7 +143,8 @@
                     </li>
 
                     <li class="realization__ability">
-                        <img class="realization__img" src="resurses/the-invitation-code.png" alt="" />
+                        <img class="realization__img" src="resurses/the-invitation-code.png" alt="экран с несколькими иконками и текстом 
+                        «ECG Master Electrocardiogram» — это образовательное приложение, предназначенное специально для студентов-медиков" />
                         <div class="fon__description">
                             <p class="realization__header">
                                 Разработка мобильного интерфейса
@@ -170,7 +171,7 @@
                     </div>
                 </div>
                 <div class="img-box">
-                    <img class="img__futer" src="resurses/for-contacts.png" alt="/" />
+                    <img class="img__futer" src="resurses/for-contacts.png" alt="изображение фронтенд-разработчика за компьютером с текстом на экране"/>
                 </div>
             </div>
 
